# network_camera_comm

./: .gitignore  README.md  camera_config.json  camera_subscriber.py
camera_publisher/: CMakeLists.txt  camera_publisher.cpp  install_deps.sh  run.sh
camera_publisher/Log/: OrbbecSDK.log.txt
